@@ -1,5 +1,11 @@
 2007-06-28  Hector E. Gomez Morales <hectoregm@gmail.com> 
 
+	* gtk-gui/Monodoc.Editor.SaveDocDialog.cs,
+	  gtk-gui/Monodoc.Editor.OpenDocDialog.cs, gtk-gui/gui.stetic: Minor
+	  changes to Save and Open dialogs
+
+2007-06-28  Hector E. Gomez Morales <hectoregm@gmail.com> 
+
 	* gtk-gui/Monodoc.Editor.EditorWindow.cs, gtk-gui/gui.stetic: Minor
 	  change moved Quit menu.
 
